# pam_interface

./: .gitignore  CMakeLists.txt  README.md  package.xml  start_stop_pam.txt
config/: pam.json  pam_sim.json
demos/: demo_dummy.cpp  demo_dummy.py  demo_real.cpp  demo_udp_communication.cpp  pamy2_udp_communication.cpp  serialize_robot_state.cpp
doc/: using_the_robot.md
include/pam_interface/: command.hpp  configuration.hpp  configuration.hxx  driver.hpp  driver.hxx  factory.hpp  factory.hxx  interface.hpp  interface.hxx  pressure_action.hpp  pressure_action.hxx  rotation.hpp  sign.hpp  typedefs.hpp
include/pam_interface/dummy/: driver.hpp  driver.hxx  interface.hpp  interface.hxx
include/pam_interface/nifpga/: NiFpga.h  NiFpga_exception.hpp  factory.hpp  robot.hpp
include/pam_interface/nifpga/4dofs/: .#NiFpga_robot.hpp  generated.h  robot.hpp
include/pam_interface/real/: driver.hpp  driver.hxx  factory.hpp  factory.hxx  interface.hpp
include/pam_interface/real/pamy1/: configuration.hpp  configuration.hxx  driver.hpp  driver.hxx  factory.hpp  factory.hxx  interface.hpp  interface.hxx
include/pam_interface/real/pamy1/nifpga/: NiFpga_exception.hpp  factory.hpp  robot.hpp
include/pam_interface/real/pamy1/nifpga/4dofs/: generated.h  robot.hpp
include/pam_interface/real/pamy2/: configuration.hpp  driver.hpp  interface.hpp  udp_c.h  udp_communication.hpp  udp_structures.hpp
include/pam_interface/state/: joint.hpp  robot.hpp  robot.hxx
pamy1/: where_are_the_file.txt
pamy1/bitfile/: pam_robot.lvbitx
pamy2/config/: pam.json
python/pam_interface/: __init__.py
src/: NiFpga.c  NiFpga_exception.cpp  NiFpga_robot.cpp  configuration.cpp  factories.cpp  instantiate.cpp  interface.cpp  pamy2_configuration.cpp  pamy2_driver.cpp  pamy2_interface.cpp  robot.cpp  rotation.cpp  sign.cpp  test.cpp  typedefs.cpp  udp_communication.cpp
src/4dofs/: robot.cpp
srcpy/: wrappers.cpp
tests/: unit_tests.cpp
