<?xml version="1.0"?>
<package>
  <name>pam_interface</name>
  <version>1.0.0</version>
  <description>wrapper over pam robot fpga</description>
  <author email="vincent.berenz@tuebingen.mpg.de">Vincent Berenz</author>
  <maintainer email="vincent.berenz@tuebingen.mpg.de">Vincent Berenz</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>robot_interfaces</build_depend>
  <build_depend>json_helper</build_depend>
  <build_depend>shared_memory</build_depend>

  <run_depend>robot_interfaces</run_depend>
  <run_depend>json_helper</run_depend>
  <run_depend>shared_memory</run_depend>

  <export>
  </export>
</package>
