<?xml version="1.0"?>
<package format="2">
  <name>pam_interface</name>
  <version>1.0.0</version>
  <description>wrapper over pam robot fpga</description>
  <author email="vincent.berenz@tuebingen.mpg.de">Vincent Berenz</author>
  <maintainer email="vincent.berenz@tuebingen.mpg.de">Vincent Berenz</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>pybind11_catkin</depend>
  <depend>json_helper</depend>
  <depend>shared_memory</depend>
  <depend>mpi_cmake_modules</depend>
  
  <export>
  </export>
</package>
