<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <name>pam_interface</name>
  <version>1.0.0</version>
  <description>wrapper over pam robot fpga</description>
  <author email="vincent.berenz@tuebingen.mpg.de">Vincent Berenz</author>
  <maintainer email="vincent.berenz@tuebingen.mpg.de">Vincent Berenz</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pybind11</depend>
  <depend>json_helper</depend>
  <depend>pam_configuration</depend>
  <depend>shared_memory</depend>
  <depend>mpi_cmake_modules</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
